[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Leto Text Sans Defect.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/result.gd" type="Script" id=2]
[ext_resource path="res://Sprites/GUI/Sprite-0001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GUI/Sprite-0002.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.721569, 0.792157, 0.729412, 0.478431 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
shadow_color = Color( 0, 0, 0, 0.054902 )
shadow_offset = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=3]
size = 47
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.666667, 0.670588, 0.552941, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.807843, 0.576471, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.62
anchor_right = 1.0
anchor_bottom = 0.7
margin_top = 7.16003
margin_bottom = -0.360046
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Твой результат"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Percent_Label" type="Label" parent="."]
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 0.62
margin_top = -0.119995
margin_bottom = -0.280029
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "58%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="."]
z_index = -10

[node name="ColorRect" type="ColorRect" parent="BG"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2824.0
margin_top = -2880.0
margin_right = 4208.0
margin_bottom = 3840.0
color = Color( 0.580392, 0.631373, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.299556
anchor_top = 0.74063
anchor_right = 0.699556
anchor_bottom = 0.84063
margin_left = 0.320007
margin_top = 0.119934
margin_right = -2.16003
margin_bottom = 0.199951
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Заново"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.35
anchor_top = 0.06
anchor_right = 0.65
anchor_bottom = 0.45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percents_bar" type="TextureProgress" parent="CenterContainer"]
margin_left = 35.0
margin_top = 5.0
margin_right = 179.0
margin_bottom = 415.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToMenu" type="Button" parent="."]
anchor_left = 0.3
anchor_top = 0.859259
anchor_right = 0.7
anchor_bottom = 0.97
margin_right = -3.05176e-05
margin_bottom = 0.400024
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "В Меню"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ToMenu" to="." method="_on_ToMenu_pressed"]
